# wallcreate

./: flake.nix  pyproject.toml
assets/: assets.json
wallcreate/: __init__.py  main.py
