[project]
name = "wallcreate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.0.0",
]

[project.scripts]
wallcreate = "wallcreate:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
