[tool.poetry]
name = "wallcreate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


catppuccin = "^2.3.4"
palettable = "^3.3.3"
pillow = "^11.0.0"
cairosvg = "^2.7.1"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wallcreate = "wallcreate:main"
